# foxglove

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
include/foxglove/: foxglove_server.h  foxglove_utils.h  proto_utility.h  server.hpp  server_common.h  utility.h  visualizer.h
pybind/: CMakeLists.txt  foxglove_binds.cpp
src/: .gitignore  CMakeLists.txt  foxglove_server.cpp  foxglove_utils.cpp  proto_utility.cpp  utility.cpp  visualizer.cpp
src/proto/foxglove/: ArrowPrimitive.proto  CameraCalibration.proto  CircleAnnotation.proto  Color.proto  CompressedImage.proto  CompressedVideo.proto  CubePrimitive.proto  CylinderPrimitive.proto  FrameTransform.proto  FrameTransforms.proto  GeoJSON.proto  Grid.proto  IMU.proto  IMUState.proto  ImageAnnotations.proto  KeyValuePair.proto  LaserScan.proto  LinePrimitive.proto  LocationFix.proto  ModelPrimitive.proto  Point2.proto  PointCloud.proto  PointsAnnotation.proto  Pose.proto  PoseInFrame.proto  PosesInFrame.proto  Quaternion.proto  RawImage.proto  SceneEntity.proto  SceneUpdate.proto  SpherePrimitive.proto  TextAnnotation.proto  TextPrimitive.proto  TriangleListPrimitive.proto  Vector2.proto  Vector3.proto
src/proto/foxglove/proto/: ArrowPrimitive.proto  CameraCalibration.proto  CircleAnnotation.proto  CompressedImage.proto  CubePrimitive.proto  CylinderPrimitive.proto  FrameTransform.proto  Grid.proto  ImageAnnotations.proto  LaserScan.proto  LinePrimitive.proto  LocationFix.proto  Log.proto  ModelPrimitive.proto  PackedElementField.proto  Point3.proto  PointCloud.proto  PointsAnnotation.proto  Pose.proto  PoseInFrame.proto  PosesInFrame.proto  RawImage.proto  SceneEntity.proto  SceneEntityDeletion.proto  SceneUpdate.proto  SpherePrimitive.proto  TextPrimitive.proto  TriangleListPrimitive.proto
